<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.514">

        <TextView
            android:id="@+id/editTextAssignmentName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/addDetailsTitle"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewCourseTitle"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/courseTitle"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/editTextCourseEdit"
            app:layout_constraintStart_toStartOf="@+id/editTextCourseEdit" />

        <EditText
            android:id="@+id/editTextCourseEdit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@+id/editTextCourseCodeEdit"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextAssignmentName" />

        <EditText
            android:id="@+id/editTextCourseCodeEdit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/editTextCourseEdit"
            app:layout_constraintTop_toBottomOf="@+id/editTextAssignmentName" />

        <TextView
            android:id="@+id/textViewCourseCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/courseCode"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/editTextCourseCodeEdit"
            app:layout_constraintStart_toStartOf="@+id/editTextCourseCodeEdit" />

        <TextView
            android:id="@+id/textViewAssignment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descriptionTitle"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/editTextAssignmentEdit"
            app:layout_constraintStart_toStartOf="@+id/editTextAssignmentEdit" />

        <EditText
            android:id="@+id/editTextAssignmentEdit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextCourseEdit" />

        <TextView
            android:id="@+id/textViewDueDate"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/dueDateTitle"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/btnDatePicker_Edit"
            app:layout_constraintStart_toStartOf="@+id/btnDatePicker_Edit" />

        <Button
            android:id="@+id/btnDatePicker_Edit"
            style="?android:spinnerStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:onClick="openDatePicker"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@+id/btnTimePicker_Edit"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextAssignmentEdit" />

        <TextView
            android:id="@+id/textViewDueTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dueTimeTitle"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/btnTimePicker_Edit"
            app:layout_constraintStart_toStartOf="@+id/btnTimePicker_Edit" />

        <Button
            android:id="@+id/btnTimePicker_Edit"
            style="?android:spinnerStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:onClick="openTimePicker"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/btnDatePicker_Edit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnDatePicker_Edit"
            app:layout_constraintTop_toBottomOf="@+id/editTextAssignmentEdit" />

        <Button
            android:id="@+id/btnSaveEdit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/addBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnDatePicker_Edit" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>